# csad2526ki401serhiiprots18

./: CMakeLists.txt  CMakeLists3.txt  README.md  ci.bat  copilot_log1.txt  copilot_log2.txt  copilot_log3.txt  copilot_log4.txt  copilot_log5 and 6.txt  copilot_log5.txt  main.cpp  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
Etap5/: copilot_log5.txt
Etap5/.github/workflows/: ci.yml
lab2/: spi_master.v  tb_spi_master.v
task3/: math_operations.cpp
tests/: unit_tests.cpp
